# electro-cpp

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: ci.yml  upload_component.yml
cmake/: electroConfig.cmake.in
docs/: Doxyfile
include/electro/: decibel  decibel.hpp  electro  electro.hpp
tests/: CMakeLists.txt  decibel_test.cpp  electro_test.cpp
vcpkg-port/: portfile.cmake  usage  vcpkg.json
